--- a/market-app/src/main/resources/application.properties
+++ b/market-app/src/main/resources/application.properties
@@ -2,4 +2,7 @@ spring.application.name=market-app
 spring.profiles.active=dev
 #server.port=809090
 server.servlet.context-path=/market-app/api
+#Setting SwaggerUI
+springdoc.swagger-ui.path=/swagger-ui.html
+spring.mvc.pathmatch.matching-strategy=ant_path_matcher
 
